--- a/public/Upload_price_cruve.ipynb
+++ b/public/Upload_price_cruve.ipynb
@@ -2,19 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "57496ee1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'dotenv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m datetime\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdotenv\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Load environment variables\u001b[39;00m\n\u001b[0;32m      8\u001b[0m load_dotenv()\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'dotenv'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Price Curve Upload Script ===\n",
+      "1. Testing MongoDB connection...\n",
+      "MongoDB connection successful!\n",
+      "Available databases: ['energy_contracts', 'admin', 'local']\n",
+      "Collections in energy_contracts: ['contracts']\n",
+      "\n",
+      "2. Uploading price curve data...\n",
+      "Connected to MongoDB: energy_contracts\n",
+      "Loaded CSV with 10200 records\n",
+      "Columns: ['profile', 'type', 'state', 'time', 'price']\n",
+      "Data processing complete. Sample record:\n",
+      "{'profile': 'baseload', 'type': 'Energy', 'state': 'NSW', 'time': '1/07/2024', 'price': 143.6, 'date': Timestamp('2024-07-01 00:00:00'), 'year': 2024, 'month': 7, 'month_name': 'July', 'curve': 'Aurora Jan 2025', 'uploadedAt': Timestamp('2025-06-04 19:56:26.671349'), 'updatedAt': Timestamp('2025-06-04 19:56:26.672942')}\n",
+      "Successfully uploaded 10200 records to MongoDB\n",
+      "Curve name: Aurora Jan 2025\n",
+      "Verification: 10200 records found in database for this curve\n",
+      "\n",
+      "Data summary:\n",
+      "Profiles: ['baseload' 'solar' 'wind']\n",
+      "Types: ['Energy' 'green']\n",
+      "States: ['NSW' 'QLD' 'SA' 'VIC']\n",
+      "Date range: 2024-07-01 to 2066-12-01\n",
+      "Total combinations: 3 profiles × 2 types × 4 states = 24\n",
+      "MongoDB connection closed\n",
+      "\n",
+      "=== Script completed ===\n"
      ]
     }
    ],
@@ -35,8 +55,8 @@
     "    \n",
     "    # MongoDB connection\n",
     "    try:\n",
-    "        # Update this with your MongoDB connection string\n",
-    "        MONGODB_URI = os.getenv('MONGODB_URI', 'mongodb://localhost:27017/')\n",
+    "        # MongoDB connection string - update .env file or use directly\n",
+    "        MONGODB_URI = os.getenv('MONGODB_URI', 'mongodb+srv://ProjectHalo:5apsFwxTlqN8WHQR@cluster0.quuwlhb.mongodb.net/energy_contracts?retryWrites=true&w=majority&appName=Cluster0')\n",
     "        MONGODB_DB = os.getenv('MONGODB_DB', 'energy_contracts')\n",
     "        \n",
     "        client = pymongo.MongoClient(MONGODB_URI)\n",
@@ -132,7 +152,7 @@
     "    Test MongoDB connection before uploading\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        MONGODB_URI = os.getenv('MONGODB_URI', 'mongodb://localhost:27017/')\n",
+    "        MONGODB_URI = os.getenv('MONGODB_URI', 'mongodb+srv://ProjectHalo:5apsFwxTlqN8WHQR@cluster0.quuwlhb.mongodb.net/energy_contracts?retryWrites=true&w=majority&appName=Cluster0')\n",
     "        MONGODB_DB = os.getenv('MONGODB_DB', 'energy_contracts')\n",
     "        \n",
     "        client = pymongo.MongoClient(MONGODB_URI)\n",
