updated contracted list

--- a/public/upload_contracts.ipynb
+++ b/public/upload_contracts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "a9ce4119",
    "metadata": {},
    "outputs": [
@@ -2438,6 +2438,7 @@
     "from datetime import datetime, timedelta\n",
     "from typing import Dict, List, Any\n",
     "import re\n",
+    "import calendar\n",
     "\n",
     "class ContractDataImporter:\n",
     "    def __init__(self, api_base_url: str = \"http://localhost:3000/api/contracts\"):\n",
@@ -2538,6 +2539,29 @@
     "        except:\n",
     "            return datetime.now().isoformat()\n",
     "    \n",
+    "    def get_hours_in_period(self, year: int, month: int) -> int:\n",
+    "        \"\"\"Get the number of hours in a given month\"\"\"\n",
+    "        days_in_month = calendar.monthrange(year, month)[1]\n",
+    "        return days_in_month * 24\n",
+    "    \n",
+    "    def convert_volume_for_contract_type(self, volume_mwh: float, contract_type: str, year: int, month: int) -> float:\n",
+    "        \"\"\"Convert MWh to appropriate unit based on contract type\"\"\"\n",
+    "        if contract_type == 'wholesale':\n",
+    "            # Convert MWh to MW by dividing by hours in the period\n",
+    "            hours_in_period = self.get_hours_in_period(year, month)\n",
+    "            volume_mw = volume_mwh / hours_in_period\n",
+    "            return round(volume_mw, 3)  # Round to 3 decimal places for MW\n",
+    "        else:\n",
+    "            # Retail and offtake contracts keep MWh\n",
+    "            return round(volume_mwh, 0)  # Round to whole MWh\n",
+    "    \n",
+    "    def get_volume_unit(self, contract_type: str) -> str:\n",
+    "        \"\"\"Get the appropriate volume unit based on contract type\"\"\"\n",
+    "        if contract_type == 'wholesale':\n",
+    "            return 'MW'\n",
+    "        else:\n",
+    "            return 'MWh'\n",
+    "    \n",
     "    def map_contract_type(self, csv_type: str) -> str:\n",
     "        \"\"\"Map CSV type to contract type\"\"\"\n",
     "        type_mapping = {\n",
@@ -2579,6 +2603,7 @@
     "            year = row['Year']\n",
     "            unit = row.get('Unit', 'Energy')  # Default to Energy if Unit column not found\n",
     "            sub_type = row.get('Sub_Type', '')  # Get Sub_Type for wholesale contracts\n",
+    "            contract_type = self.map_contract_type(row['type'])\n",
     "            \n",
     "            # Create unique key for contract (deal name + unit type)\n",
     "            contract_key = f\"{deal_name}_{unit}\"\n",
@@ -2589,7 +2614,7 @@
     "                    'unit': unit,\n",
     "                    'sub_type': sub_type,\n",
     "                    'state': row['State'],\n",
-    "                    'type': self.map_contract_type(row['type']),\n",
+    "                    'type': contract_type,\n",
     "                    'buysell': row.get('buysell', 'Sell'),\n",
     "                    'time_series_data': [],\n",
     "                    'years_covered': set(),\n",
@@ -2603,13 +2628,19 @@
     "            # Add year to covered years\n",
     "            contracts_data[contract_key]['years_covered'].add(year)\n",
     "            \n",
+    "            # Convert volume based on contract type\n",
+    "            original_volume_mwh = float(row['Volume'])\n",
+    "            converted_volume = self.convert_volume_for_contract_type(\n",
+    "                original_volume_mwh, contract_type, year, row['Month']\n",
+    "            )\n",
+    "            \n",
     "            # Add time series point\n",
     "            timestamp = self.parse_date_from_row(row)\n",
     "            period = f\"{year}-{str(row['Month']).zfill(2)}\"\n",
     "            \n",
     "            time_point = {\n",
     "                'timestamp': timestamp,\n",
-    "                'volume': float(row['Volume']),\n",
+    "                'volume': converted_volume,\n",
     "                'price': round(float(row['Price_CY']), 2),  # Round to 2 decimal places\n",
     "                'period': period,\n",
     "                'periodType': 'monthly'\n",
@@ -2621,12 +2652,13 @@
     "        for contract_key in contracts_data:\n",
     "            years_list = sorted(list(contracts_data[contract_key]['years_covered']))\n",
     "            contracts_data[contract_key]['years_covered'] = years_list\n",
-    "            print(f\"Contract: {contracts_data[contract_key]['deal_name']} ({contracts_data[contract_key]['unit']}) - Years: {years_list}\")\n",
+    "            volume_unit = self.get_volume_unit(contracts_data[contract_key]['type'])\n",
+    "            print(f\"Contract: {contracts_data[contract_key]['deal_name']} ({contracts_data[contract_key]['unit']}) - Type: {contracts_data[contract_key]['type']} - Unit: {volume_unit} - Years: {years_list}\")\n",
     "        \n",
     "        print(f\"Grouped data into {len(contracts_data)} unique contracts\")\n",
     "        return contracts_data\n",
     "    \n",
-    "    def calculate_annual_volume(self, time_series: List[Dict], years_covered: List[int]) -> float:\n",
+    "    def calculate_annual_volume(self, time_series: List[Dict], years_covered: List[int], contract_type: str) -> float:\n",
     "        \"\"\"Calculate volume for one full calendar year if data exists, otherwise return total\"\"\"\n",
     "        if not time_series:\n",
     "            return 0\n",
@@ -2652,11 +2684,16 @@
     "        if complete_years:\n",
     "            # Return volume from the most recent complete year\n",
     "            complete_years.sort(key=lambda x: x[0], reverse=True)  # Sort by year, newest first\n",
-    "            return round(complete_years[0][1], 0)\n",
+    "            volume = complete_years[0][1]\n",
     "        else:\n",
     "            # No complete year found, return total volume for all available data\n",
-    "            total_volume = sum(point['volume'] for point in time_series)\n",
-    "            return round(total_volume, 0)\n",
+    "            volume = sum(point['volume'] for point in time_series)\n",
+    "        \n",
+    "        # Round appropriately based on contract type\n",
+    "        if contract_type == 'wholesale':\n",
+    "            return round(volume, 3)  # MW to 3 decimal places\n",
+    "        else:\n",
+    "            return round(volume, 0)  # MWh to whole numbers\n",
     "    \n",
     "    def clear_database(self) -> bool:\n",
     "        \"\"\"Clear all contracts from the database\"\"\"\n",
@@ -2731,13 +2768,17 @@
     "        sub_type = contract_data.get('sub_type', '')\n",
     "        time_series = contract_data['time_series_data']\n",
     "        years_covered = contract_data['years_covered']\n",
+    "        contract_type = contract_data['type']\n",
+    "        \n",
+    "        # Get appropriate volume unit\n",
+    "        volume_unit = self.get_volume_unit(contract_type)\n",
     "        \n",
     "        # Calculate aggregated values\n",
     "        total_volume = sum(point['volume'] for point in time_series)\n",
     "        avg_price = round(sum(point['price'] for point in time_series) / len(time_series), 2) if time_series else 0\n",
     "        \n",
     "        # Calculate annual volume - try to get one full calendar year if data exists\n",
-    "        annual_volume = self.calculate_annual_volume(time_series, years_covered)\n",
+    "        annual_volume = self.calculate_annual_volume(time_series, years_covered, contract_type)\n",
     "        \n",
     "        # Determine start and end dates from time series\n",
     "        timestamps = [datetime.fromisoformat(point['timestamp']) for point in time_series]\n",
@@ -2749,15 +2790,15 @@
     "        \n",
     "        new_contract = {\n",
     "            'name': contract_name,\n",
-    "            'type': contract_data['type'],\n",
-    "            'category': self.map_contract_category(contract_data['type'], deal_name, sub_type),\n",
+    "            'type': contract_type,\n",
+    "            'category': self.map_contract_category(contract_type, deal_name, sub_type),\n",
     "            'state': contract_data['state'],\n",
     "            'counterparty': deal_name,  # Use deal name as counterparty\n",
     "            'startDate': start_date,\n",
     "            'endDate': end_date,\n",
     "            'annualVolume': annual_volume,  # Volume for one full CY if available, otherwise total for available data\n",
     "            'strikePrice': avg_price,\n",
-    "            'unit': unit,\n",
+    "            'unit': volume_unit,  # Use MW for wholesale, MWh for others\n",
     "            'volumeShape': 'custom',\n",
     "            'status': 'active',\n",
     "            'indexation': 'Fixed',\n",
@@ -2855,8 +2896,10 @@
     "            unit = contract_data['unit']\n",
     "            years_covered = contract_data['years_covered']\n",
     "            time_series = contract_data['time_series_data']\n",
+    "            contract_type = contract_data['type']\n",
+    "            volume_unit = self.get_volume_unit(contract_type)\n",
     "            \n",
-    "            print(f\"\\nProcessing: {deal_name} ({unit}) - Years: {years_covered} - {len(time_series)} data points\")\n",
+    "            print(f\"\\nProcessing: {deal_name} ({unit}) - Type: {contract_type} - Unit: {volume_unit} - Years: {years_covered} - {len(time_series)} data points\")\n",
     "            \n",
     "            # Check if contract exists (look for deal name with or without unit suffix)\n",
     "            existing_contract = self.find_matching_contract(deal_name, existing_contracts)\n",
@@ -2895,8 +2938,8 @@
     "                else:\n",
     "                    print(f\"  → Would create new contract: {new_contract_data['name']}\")\n",
     "                    print(f\"     Type: {new_contract_data['type']}, State: {new_contract_data['state']}, Unit: {new_contract_data['unit']}\")\n",
-    "                    print(f\"     Annual Volume: {new_contract_data['annualVolume']:,.0f}, Avg Price: ${new_contract_data['strikePrice']:.2f}\")\n",
-    "                    print(f\"     Total Volume: {new_contract_data['totalVolume']:,.0f}, Time Series Points: {len(time_series)}, Years: {years_covered}\")\n",
+    "                    print(f\"     Annual Volume: {new_contract_data['annualVolume']:,.3f} {volume_unit}, Avg Price: ${new_contract_data['strikePrice']:.2f}\")\n",
+    "                    print(f\"     Total Volume: {new_contract_data['totalVolume']:,.3f} {volume_unit}, Time Series Points: {len(time_series)}, Years: {years_covered}\")\n",
     "                    created_count += 1\n",
     "        \n",
     "        # Summary\n",
