--- a/public/upload_contracts.ipynb
+++ b/public/upload_contracts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a9ce4119",
    "metadata": {},
    "outputs": [
@@ -2674,10 +2674,12 @@
     "            return 'sell'  # Default to sell\n",
     "        \n",
     "        trade_lower = str(trade_value).lower().strip()\n",
-    "        if 'buy' in trade_lower or 'purchase' in trade_lower:\n",
+    "        if 'buy' in trade_lower or 'purchase' in trade_lower or 'consumption' in trade_lower:\n",
     "            return 'buy'\n",
-    "        else:\n",
+    "        elif 'sell' in trade_lower or 'sale' in trade_lower or 'generation' in trade_lower:\n",
     "            return 'sell'\n",
+    "        else:\n",
+    "            return 'sell'  # Default fallback\n",
     "    \n",
     "    def map_contract_category(self, contract_type: str, deal_name: str, sub_type: str = None) -> str:\n",
     "        \"\"\"Determine contract category based on type, deal name, and sub_type\"\"\"\n",
