--- a/public/update_fielddirection.ipynb
+++ b/public/update_fielddirection.ipynb
@@ -7,12 +7,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unterminated f-string literal (detected at line 47) (2906743771.py, line 47)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 47\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"No documents were found containing)\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated f-string literal (detected at line 47)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<function __main__.rename_mongodb_field()>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -64,7 +66,7 @@
     "        else:\n",
     "            print(f\"No documents were found containing) the field '{old_field_name}'.\")\n",
     "    except Exception as e:\n",
-    "        print(f\"An error occurred: {e}\")"
+    "        print(f\"An error occurred: {e}\")\n"
    ]
   }
  ],
