--- a/public/update_fielddirection.ipynb
+++ b/public/update_fielddirection.ipynb
@@ -7,14 +7,22 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<function __main__.rename_mongodb_field()>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connecting to MongoDB...\n",
+      "Successfully connected to database 'energy_contracts' and collection 'contracts'.\n",
+      "\n",
+      "This script will permanently rename the field 'tradeDirection' to 'direction'.\n",
+      "\n",
+      "--- Migration Complete ---\n",
+      "Documents that matched the filter: 412\n",
+      "Documents that were modified: 412\n",
+      "--------------------------\n",
+      "\n",
+      "Successfully renamed 'tradeDirection' to 'direction' in the collection.\n",
+      "MongoDB connection closed.\n"
+     ]
     }
    ],
    "source": [
@@ -64,9 +72,19 @@
     "        if result.modified_count > 0:\n",
     "            print(f\"Successfully renamed '{old_field_name}' to '{new_field_name}' in the collection.\")\n",
     "        else:\n",
-    "            print(f\"No documents were found containing) the field '{old_field_name}'.\")\n",
+    "            print(f\"No documents were found containing the field '{old_field_name}'.\")\n",
+    "            \n",
     "    except Exception as e:\n",
-    "        print(f\"An error occurred: {e}\")\n"
+    "        print(f\"An error occurred: {e}\")\n",
+    "    finally:\n",
+    "        # It's good practice to close the connection\n",
+    "        if 'client' in locals() and client:\n",
+    "            client.close()\n",
+    "            print(\"MongoDB connection closed.\")\n",
+    "\n",
+    "# This block runs the function when the script is executed directly\n",
+    "if __name__ == \"__main__\":\n",
+    "    rename_mongodb_field()\n"
    ]
   }
  ],
