--- a/public/Upload_price_cruve.ipynb
+++ b/public/Upload_price_cruve.ipynb
@@ -192,6 +192,205 @@
     "    \n",
     "    print(\"\\n=== Script completed ===\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c5705f84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Green Baseload Price Creator ===\n",
+      "Connected to MongoDB: energy_contracts\n",
+      "\n",
+      "=== Current Green Price Data ===\n",
+      "Found 4080 existing Green records\n",
+      "Current Green profiles:\n",
+      "  solar: 2040 records\n",
+      "  wind: 2040 records\n",
+      "\n",
+      "Found 2040 Solar Green records to copy\n",
+      "\n",
+      "Preparing to insert 2040 new baseload Green records\n",
+      "\n",
+      "Sample of new records:\n",
+      "  QLD - 2024-07 - $38.0\n",
+      "  SA - 2024-07 - $38.0\n",
+      "  VIC - 2024-07 - $38.0\n",
+      "\n",
+      "SUCCESS: Inserted 2040 new baseload Green records\n",
+      "\n",
+      "=== Final Green Price Data ===\n",
+      "Final Green profiles:\n",
+      "  solar: 2040 records\n",
+      "  wind: 2040 records\n",
+      "  baseload: 2040 records\n",
+      "\n",
+      "Available states for Green baseload: NSW, QLD, SA, VIC\n",
+      "\n",
+      "=== Testing MtM Query Patterns ===\n",
+      "Query {'type': 'green', 'profile': 'baseload'}: 2040 records found\n",
+      "Query {'type': 'Green', 'profile': 'baseload'}: 0 records found\n",
+      "\n",
+      "Your MtM should now find Green prices using these keys:\n",
+      "- 'green - baseload'\n",
+      "- 'Green - baseload'\n",
+      "- 'green' (if you modify lookup to default to baseload)\n",
+      "\n",
+      "MongoDB connection closed\n",
+      "\n",
+      "=== Script completed ===\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymongo\n",
+    "from datetime import datetime\n",
+    "import os\n",
+    "\n",
+    "def create_green_baseload_prices():\n",
+    "    \"\"\"\n",
+    "    Create baseload Green price data by copying from solar Green prices\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # MongoDB connection - using your connection string directly\n",
+    "    try:\n",
+    "        # Use your MongoDB connection string directly\n",
+    "        MONGODB_URI = 'mongodb+srv://ProjectHalo:5apsFwxTlqN8WHQR@cluster0.quuwlhb.mongodb.net/energy_contracts?retryWrites=true&w=majority&appName=Cluster0'\n",
+    "        MONGODB_DB = 'energy_contracts'\n",
+    "        \n",
+    "        client = pymongo.MongoClient(MONGODB_URI)\n",
+    "        db = client[MONGODB_DB]\n",
+    "        collection = db['price_curves']\n",
+    "        \n",
+    "        print(f\"Connected to MongoDB: {MONGODB_DB}\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error connecting to MongoDB: {e}\")\n",
+    "        return\n",
+    "    \n",
+    "    try:\n",
+    "        # 1. Check current Green data\n",
+    "        print(\"\\n=== Current Green Price Data ===\")\n",
+    "        current_green = list(collection.find({\"type\": \"green\"}))\n",
+    "        print(f\"Found {len(current_green)} existing Green records\")\n",
+    "        \n",
+    "        # Show breakdown by profile\n",
+    "        profile_breakdown = {}\n",
+    "        for record in current_green:\n",
+    "            profile = record.get('profile', 'unknown')\n",
+    "            profile_breakdown[profile] = profile_breakdown.get(profile, 0) + 1\n",
+    "        \n",
+    "        print(\"Current Green profiles:\")\n",
+    "        for profile, count in profile_breakdown.items():\n",
+    "            print(f\"  {profile}: {count} records\")\n",
+    "        \n",
+    "        # 2. Find solar Green records to copy\n",
+    "        solar_green_records = list(collection.find({\n",
+    "            \"type\": \"green\",\n",
+    "            \"profile\": \"solar\"\n",
+    "        }))\n",
+    "        \n",
+    "        print(f\"\\nFound {len(solar_green_records)} Solar Green records to copy\")\n",
+    "        \n",
+    "        if len(solar_green_records) == 0:\n",
+    "            print(\"ERROR: No Solar Green records found!\")\n",
+    "            available_profiles = collection.distinct(\"profile\", {\"type\": \"green\"})\n",
+    "            print(f\"Available Green profiles: {available_profiles}\")\n",
+    "            return\n",
+    "        \n",
+    "        # 3. Check if baseload Green already exists\n",
+    "        existing_baseload = collection.count_documents({\n",
+    "            \"type\": \"green\",\n",
+    "            \"profile\": \"baseload\"\n",
+    "        })\n",
+    "        \n",
+    "        if existing_baseload > 0:\n",
+    "            print(f\"\\nWARNING: {existing_baseload} baseload Green records already exist\")\n",
+    "            response = input(\"Delete existing baseload Green records? (y/n): \")\n",
+    "            if response.lower() == 'y':\n",
+    "                delete_result = collection.delete_many({\"type\": \"green\", \"profile\": \"baseload\"})\n",
+    "                print(f\"Deleted {delete_result.deleted_count} existing baseload Green records\")\n",
+    "        \n",
+    "        # 4. Create new baseload Green records\n",
+    "        new_baseload_records = []\n",
+    "        \n",
+    "        for solar_record in solar_green_records:\n",
+    "            # Create a copy of the solar record\n",
+    "            baseload_record = solar_record.copy()\n",
+    "            \n",
+    "            # Remove the MongoDB _id to create new records\n",
+    "            if '_id' in baseload_record:\n",
+    "                del baseload_record['_id']\n",
+    "            \n",
+    "            # Change profile from solar to baseload\n",
+    "            baseload_record['profile'] = 'baseload'\n",
+    "            \n",
+    "            # Add timestamp\n",
+    "            baseload_record['createdAt'] = datetime.now()\n",
+    "            \n",
+    "            new_baseload_records.append(baseload_record)\n",
+    "        \n",
+    "        print(f\"\\nPreparing to insert {len(new_baseload_records)} new baseload Green records\")\n",
+    "        \n",
+    "        # Show sample of what will be created\n",
+    "        print(\"\\nSample of new records:\")\n",
+    "        for i, record in enumerate(new_baseload_records[:3]):\n",
+    "            print(f\"  {record['state']} - {record['year']}-{record['month']:02d} - ${record['price']}\")\n",
+    "        \n",
+    "        # 5. Insert new records\n",
+    "        if len(new_baseload_records) > 0:\n",
+    "            insert_result = collection.insert_many(new_baseload_records)\n",
+    "            print(f\"\\nSUCCESS: Inserted {len(insert_result.inserted_ids)} new baseload Green records\")\n",
+    "        \n",
+    "        # 6. Verify results\n",
+    "        print(\"\\n=== Final Green Price Data ===\")\n",
+    "        final_green = list(collection.find({\"type\": \"green\"}))\n",
+    "        final_profile_breakdown = {}\n",
+    "        for record in final_green:\n",
+    "            profile = record.get('profile', 'unknown')\n",
+    "            final_profile_breakdown[profile] = final_profile_breakdown.get(profile, 0) + 1\n",
+    "        \n",
+    "        print(\"Final Green profiles:\")\n",
+    "        for profile, count in final_profile_breakdown.items():\n",
+    "            print(f\"  {profile}: {count} records\")\n",
+    "        \n",
+    "        # 7. Show available states for baseload Green\n",
+    "        baseload_states = collection.distinct(\"state\", {\"type\": \"green\", \"profile\": \"baseload\"})\n",
+    "        print(f\"\\nAvailable states for Green baseload: {', '.join(baseload_states)}\")\n",
+    "        \n",
+    "        # 8. Test queries that your MtM will use\n",
+    "        print(\"\\n=== Testing MtM Query Patterns ===\")\n",
+    "        \n",
+    "        test_queries = [\n",
+    "            {\"type\": \"green\", \"profile\": \"baseload\"},\n",
+    "            {\"type\": \"Green\", \"profile\": \"baseload\"},  # Capitalized\n",
+    "        ]\n",
+    "        \n",
+    "        for query in test_queries:\n",
+    "            count = collection.count_documents(query)\n",
+    "            print(f\"Query {query}: {count} records found\")\n",
+    "        \n",
+    "        print(\"\\nYour MtM should now find Green prices using these keys:\")\n",
+    "        print(\"- 'green - baseload'\")\n",
+    "        print(\"- 'Green - baseload'\") \n",
+    "        print(\"- 'green' (if you modify lookup to default to baseload)\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing data: {e}\")\n",
+    "        \n",
+    "    finally:\n",
+    "        client.close()\n",
+    "        print(\"\\nMongoDB connection closed\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    print(\"=== Green Baseload Price Creator ===\")\n",
+    "    create_green_baseload_prices()\n",
+    "    print(\"\\n=== Script completed ===\")"
+   ]
   }
  ],
  "metadata": {
@@ -210,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
