--- a/public/Upload_price_curve_intervals.ipynb
+++ b/public/Upload_price_curve_intervals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "57496ee1",
    "metadata": {},
    "outputs": [
@@ -10,28 +10,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Price Curve Upload Script ===\n",
+      "=== Price Curves Intervals Upload Script ===\n",
       "1. Testing MongoDB connection...\n",
       "MongoDB connection successful!\n",
       "Available databases: ['energy_contracts', 'admin', 'local']\n",
-      "Collections in energy_contracts: ['contracts']\n",
+      "Collections in energy_contracts: ['contracts', 'price_curves']\n",
       "\n",
-      "2. Uploading price curve data...\n",
+      "2. Uploading price intervals data...\n",
       "Connected to MongoDB: energy_contracts\n",
-      "Loaded CSV with 10200 records\n",
-      "Columns: ['profile', 'type', 'state', 'time', 'price']\n",
-      "Data processing complete. Sample record:\n",
-      "{'profile': 'baseload', 'type': 'Energy', 'state': 'NSW', 'time': '1/07/2024', 'price': 143.6, 'date': Timestamp('2024-07-01 00:00:00'), 'year': 2024, 'month': 7, 'month_name': 'July', 'curve': 'Aurora Jan 2025', 'uploadedAt': Timestamp('2025-06-04 19:56:26.671349'), 'updatedAt': Timestamp('2025-06-04 19:56:26.672942')}\n",
-      "Successfully uploaded 10200 records to MongoDB\n",
-      "Curve name: Aurora Jan 2025\n",
-      "Verification: 10200 records found in database for this curve\n",
+      "Loaded CSV with 2592 records\n",
+      "Columns: ['Region', 'ContracType', 'FY', 'CY', 'Month', 'Interval_date', 'period_30', 'Scenario', 'price_real_$']\n",
+      "Sample data (first 3 rows):\n",
+      "  Region ContracType    FY    CY  Month Interval_date period_30 Scenario  price_real_$\n",
+      "0    NSW      Energy  2025  2024      7     1/07/2024       all  Central        126.86\n",
+      "1    NSW      Energy  2025  2024      8     1/08/2024       all  Central        120.72\n",
+      "2    NSW      Energy  2025  2024      9     1/09/2024       all  Central        102.02\n",
+      "Data processing complete. Sample processed record:\n",
+      "{'state': 'NSW', 'type': 'Energy', 'FY': 2025, 'CY': 2024, 'Month': 7, 'time': '1/07/2024', 'period_30': 'all', 'Scenario': 'Central', 'price': 126.86, 'date': Timestamp('2024-07-01 00:00:00'), 'year': 2024, 'month_num': 7, 'month_name': 'July', 'curve': 'Aurora Jan 2025 Intervals', 'uploadedAt': Timestamp('2025-06-13 12:04:03.813410'), 'updatedAt': Timestamp('2025-06-13 12:04:03.825987')}\n",
+      "Successfully uploaded 2592 records to MongoDB\n",
+      "Curve name: Aurora Jan 2025 Intervals\n",
+      "Verification: 2592 records found in database for this curve\n",
       "\n",
       "Data summary:\n",
-      "Profiles: ['baseload' 'solar' 'wind']\n",
-      "Types: ['Energy' 'green']\n",
-      "States: ['NSW' 'QLD' 'SA' 'VIC']\n",
-      "Date range: 2024-07-01 to 2066-12-01\n",
-      "Total combinations: 3 profiles × 2 types × 4 states = 24\n",
+      "States: ['NSW' 'QLD' 'SA' 'TAS' 'VIC' 'Green']\n",
+      "Contract Types: ['Energy' 'Green']\n",
+      "Scenarios: ['Central']\n",
+      "Financial Years: 2025 to 2060\n",
+      "Date range: 2024-07-01 to 2060-06-01\n",
+      "Total combinations: 6 states × 2 types × 1 scenarios\n",
       "MongoDB connection closed\n",
       "\n",
       "=== Script completed ===\n"
@@ -228,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
